--- a/final-evenmaster/src/main/resources/templates/events.html
+++ b/final-evenmaster/src/main/resources/templates/events.html
@@ -82,7 +82,7 @@
     </div>
   </footer>
 
-  <script>
+  <script>git
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
