design and some changes

--- a/final-evenmaster/src/main/resources/templates/organizer/create-event.html
+++ b/final-evenmaster/src/main/resources/templates/organizer/create-event.html
@@ -33,8 +33,10 @@
           <form id="createForm" th:action="@{/events/create}" th:object="${eventDto}" method="post" class="card" style="display:grid; gap:12px; padding:16px;">
               <input type="text" th:field="*{title}" placeholder="Tədbirin adı" required style="padding:12px; border-radius:10px; background:#161822; border:1px solid var(--border); color:var(--text);" />
           <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
-            <input type="date" th:field="*{dateLine}"required style="padding:12px; border-radius:10px; background:#161822; border:1px solid var(--border); color:var(--text);" />
-              <p>Şirkət: <span th:text="${organizer.company.name}" required style="padding:12px; border-radius:10px; background:#161822; border:1px solid var(--border); color:var(--text);"></span></p>
+              <input type="datetime-local"
+                     th:field="*{dateLine}"
+                     required
+                     style="padding:12px; border-radius:10px; background:#161822; border:1px solid var(--border); color:var(--text);" />              <p>Şirkət: <span th:text="${organizer.company.name}" required style="padding:12px; border-radius:10px; background:#161822; border:1px solid var(--border); color:var(--text);"></span></p>
               <select th:field="*{location}" required style="padding:12px; border-radius:10px; background:#161822; border:1px solid var(--border); color:var(--text);">
                   <option value="">Məkan seçin</option>
                   <option value="Bütün Azərbaycan">Bütün Azərbaycan</option>
